# PyTorch-ML

./: DataParallel.md  Face_swapping.ipynb  LSTMs_in_PyTorch_🔥.ipynb  LinearRegression_PyTorch.ipynb  PyTorch_course_1.ipynb  Pytorch_1.ipynb  README.md  cool-repos.md  pyproject.toml  torch-llm.md  torchgeo.md
Basics/: CNN.ipynb  Pytorch1.ipynb
Deepchecks/: plot_detection_tutorial.ipynb
LLM-Torch/: LLM_torch.ipynb
TPU-pytorch/: Training_an_NLI_Model_using_Colab_TPUs.ipynb  transformer_tutorial.ipynb
notebooks/: 04_inception_resnet_densenet.ipynb  1.md  Image_classification.ipynb  PyTorchintro.ipynb  resnet-50.ipynb  vgg_cats_dogs.ipynb
notebooks/lightfm_pytorch/: Picky.ipynb
pytorch_lightning/: pytorch_lightning_cancer.ipynb  stain-transfer-w-pix2pix-pytorch-lightning.ipynb
